resolve navigation dropdown functionality on mobile device

--- a/HTML/assets/css/main.css
+++ b/HTML/assets/css/main.css
@@ -1089,7 +1089,7 @@ footer .badges-container {
 	position: absolute;
 	left: 20px;
 	right: 30px;
-	bottom: -67px;
+	bottom: -100px;
 	z-index: 7;
 }
 .current-slider, .total-slider{
@@ -1554,9 +1554,6 @@ form.form-section h3.heading-beacome-partner {
 .btn-purple-style {
 	font-family: "Fort-Medium";
 }
-.slider-nav-control {
-	bottom: -54px;
-}
 #referal_about_us {
 	padding: 50px 0 54px;
 }
@@ -1904,7 +1901,7 @@ background-color: #ffffff;
 /*-----------------------------------------------------------------------------------*/
 
 /*batch 1 insights section carousal for mobile only*/
-#home_resource_list .customNavigation{
+#home_resource_list .customNavigation, #testimonial .customNavigation{
  font-size: 15px;
  margin: 25px auto 40px;
  font-family: "Fort-Book";
@@ -1916,20 +1913,32 @@ background-color: #ffffff;
 #home_resource_list .owl-controls{
  display: none;
 }
+
 #home_resource_list .customNavigation .slide-prev, 
 #home_resource_list .customNavigation .slide-next, 
-#home_resource_list .customNavigation span {
+#home_resource_list .customNavigation span, #testimonial .customNavigation span, #testimonial .customNavigation .prev, #testimonial .customNavigation .next {
  font-size: 26px;
  color: #6a2875;
+ cursor: pointer;
 }
-
+#testimonial .customNavigation .prev i, #testimonial .customNavigation .next i {
+ position: relative;
+ top:4px;
+}
+#testimonial .customNavigation .prev, #testimonial .customNavigation .next {
+ color: #c8c8c8;
+}
 #home_resource_list .customNavigation span {
  color: #fff;
 }
+#testimonial .customNavigation span {
+ color: #6f6f71;
+}
 
 #home_resource_list .customNavigation .slide-prev.active, 
-#home_resource_list .customNavigation .slide-next.active {
+#home_resource_list .customNavigation .slide-next.active, #testimonial .customNavigation .next.active, #testimonial .customNavigation .prev.active  {
  color: #01AEF0;
+
 }
 
 #home_resource_list .see-all-resources{
@@ -1939,4 +1948,22 @@ background-color: #ffffff;
  color: #fff;
  border-color: #fff;
 }
+
 /*batch 1 insights section carousal for mobile only end*/
+
+
+.dropdown .glyphicon-menu-down {
+	position: absolute;
+    right: 0;
+    top: 12px;
+    width: 30px;
+    text-align: center;
+    line-height: 19px;
+    cursor: pointer;
+    z-index: 99;
+}
+
+.primary-nav .nav li.dropdown > a {
+	margin-right: 13px;
+}
+
